feat(jobs): added all features