@@ -3,11 +3,13 @@ package com.zbib.hiresync.controller;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.zbib.hiresync.config.TestSecurityConfig;
 import com.zbib.hiresync.dto.filter.ApplicationFilter;
-import com.zbib.hiresync.dto.filter.JobPostFilter;
+import com.zbib.hiresync.dto.filter.JobFilter;
 import com.zbib.hiresync.dto.request.CreateJobPostRequest;
 import com.zbib.hiresync.dto.request.UpdateJobPostRequest;
 import com.zbib.hiresync.dto.response.ApplicationSummaryResponse;
+import com.zbib.hiresync.dto.response.JobFeedResponse;
 import com.zbib.hiresync.dto.response.JobPostResponse;
+import com.zbib.hiresync.dto.response.JobPostStatsResponse;
 import com.zbib.hiresync.dto.response.JobPostSummaryResponse;
 import com.zbib.hiresync.entity.User;
 import com.zbib.hiresync.enums.ApplicationStatus;
@@ -15,7 +17,7 @@ import com.zbib.hiresync.enums.EmploymentType;
 import com.zbib.hiresync.enums.WorkplaceType;
 import com.zbib.hiresync.service.ApplicationService;
 import com.zbib.hiresync.service.AuthService;
-import com.zbib.hiresync.service.JobPostService;
+import com.zbib.hiresync.service.JobService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,8 +35,11 @@ import org.springframework.web.context.WebApplicationContext;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.hamcrest.Matchers.hasSize;
@@ -44,9 +49,9 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 import static org.springframework.test.web.servlet.setup.MockMvcBuilders.*;
 
-@WebMvcTest(JobPostController.class)
+@WebMvcTest(JobController.class)
 @Import(TestSecurityConfig.class)
-public class JobPostControllerTest {
+public class JobControllerTest {
 
     @Autowired
     private WebApplicationContext context;
@@ -57,7 +62,7 @@ public class JobPostControllerTest {
     private ObjectMapper objectMapper;
 
     @MockBean
-    private JobPostService jobPostService;
+    private JobService jobService;
 
     @MockBean
     private ApplicationService applicationService;
@@ -67,6 +72,7 @@ public class JobPostControllerTest {
 
     private JobPostResponse jobPostResponse;
     private List<JobPostSummaryResponse> summaryResponses;
+    private JobFeedResponse feedResponse;
     private User mockUser;
     private static final String TEST_USERNAME = "test@example.com";
 
@@ -123,8 +129,77 @@ public class JobPostControllerTest {
                 .build();
 
         summaryResponses = List.of(summaryResponse);
+        
+        // Setup JobFeed response
+        Map<String, Long> locationFacets = new HashMap<>();
+        locationFacets.put("country:US", 10L);
+        locationFacets.put("city:New York", 5L);
+        
+        Map<String, Long> skillFacets = new HashMap<>();
+        skillFacets.put("Java", 10L);
+        skillFacets.put("Spring Boot", 8L);
+        
+        List<JobFeedResponse.SalaryRangeFacet> salaryRanges = List.of(
+            new JobFeedResponse.SalaryRangeFacet("50k - 100k", "USD", "50k - 100k USD", 5L),
+            new JobFeedResponse.SalaryRangeFacet("100k+", "USD", "100k+ USD", 3L)
+        );
+        
+        Page<JobPostSummaryResponse> jobsPage = new PageImpl<>(summaryResponses);
+        
+        feedResponse = JobFeedResponse.builder()
+                .jobs(jobsPage)
+                .appliedFilters(new JobFilter())
+                .locationFacets(locationFacets)
+                .skillFacets(skillFacets)
+                .salaryRanges(salaryRanges)
+                .popularSearches(List.of("Software Engineer", "Marketing"))
+                .recommendedJobIds(Set.of())
+                .build();
     }
 
+    // Public endpoints tests
+    
+    @Test
+    public void testGetJobFeed() throws Exception {
+        // Given
+        when(jobService.getJobFeed(any(JobFilter.class), any(Pageable.class))).thenReturn(feedResponse);
+
+        // When & Then
+        mockMvc.perform(get("/api/v1/jobs/feed"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.jobs").exists())
+                .andExpect(jsonPath("$.locationFacets").exists())
+                .andExpect(jsonPath("$.skillFacets").exists())
+                .andExpect(jsonPath("$.salaryRanges").exists());
+    }
+    
+    @Test
+    public void testGetPublicJobPosts() throws Exception {
+        // Given
+        PageImpl<JobPostSummaryResponse> page = new PageImpl<>(summaryResponses);
+        when(jobService.getAllPublicJobPosts(any(JobFilter.class), any(Pageable.class))).thenReturn(page);
+
+        // When & Then
+        mockMvc.perform(get("/api/v1/jobs/public"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content", hasSize(summaryResponses.size())));
+    }
+    
+    @Test
+    public void testGetPublicJobPostById() throws Exception {
+        // Given
+        UUID jobPostId = UUID.randomUUID();
+        when(jobService.getPublicJobPostById(jobPostId)).thenReturn(jobPostResponse);
+
+        // When & Then
+        mockMvc.perform(get("/api/v1/jobs/public/" + jobPostId))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").exists())
+                .andExpect(jsonPath("$.title").value("Software Engineer"));
+    }
+
+    // Authenticated endpoints tests
+    
     @Test
     @WithMockUser(username = TEST_USERNAME)
     public void testCreateJobPost() throws Exception {
@@ -146,10 +221,10 @@ public class JobPostControllerTest {
                 .tags(new HashSet<>(Arrays.asList("Backend", "Senior")))
                 .build();
 
-        when(jobPostService.createJobPost(any(CreateJobPostRequest.class), eq(TEST_USERNAME))).thenReturn(jobPostResponse);
+        when(jobService.createJobPost(any(CreateJobPostRequest.class), eq(TEST_USERNAME))).thenReturn(jobPostResponse);
 
         // When & Then
-        mockMvc.perform(post("/api/v1/job-posts")
+        mockMvc.perform(post("/api/v1/jobs")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isCreated())
@@ -172,10 +247,10 @@ public class JobPostControllerTest {
                 .workplaceType(WorkplaceType.REMOTE)
                 .build();
 
-        when(jobPostService.updateJobPost(eq(jobPostId), any(UpdateJobPostRequest.class), eq(TEST_USERNAME))).thenReturn(jobPostResponse);
+        when(jobService.updateJobPost(eq(jobPostId), any(UpdateJobPostRequest.class), eq(TEST_USERNAME))).thenReturn(jobPostResponse);
 
         // When & Then
-        mockMvc.perform(put("/api/v1/job-posts/" + jobPostId)
+        mockMvc.perform(put("/api/v1/jobs/" + jobPostId)
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isOk())
@@ -187,10 +262,10 @@ public class JobPostControllerTest {
     public void testGetJobPostById() throws Exception {
         // Given
         UUID jobPostId = UUID.randomUUID();
-        when(jobPostService.getJobPostById(jobPostId, TEST_USERNAME)).thenReturn(jobPostResponse);
+        when(jobService.getJobPostById(jobPostId, TEST_USERNAME)).thenReturn(jobPostResponse);
 
         // When & Then
-        mockMvc.perform(get("/api/v1/job-posts/" + jobPostId))
+        mockMvc.perform(get("/api/v1/jobs/" + jobPostId))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").exists())
                 .andExpect(jsonPath("$.title").value("Software Engineer"));
@@ -201,11 +276,87 @@ public class JobPostControllerTest {
     public void testDeleteJobPost() throws Exception {
         // Given
         UUID jobPostId = UUID.randomUUID();
-        doNothing().when(jobPostService).deleteJobPost(jobPostId, TEST_USERNAME);
+        doNothing().when(jobService).deleteJobPost(jobPostId, TEST_USERNAME);
 
         // When & Then
-        mockMvc.perform(delete("/api/v1/job-posts/" + jobPostId))
+        mockMvc.perform(delete("/api/v1/jobs/" + jobPostId))
                 .andExpect(status().isNoContent());
+
+        verify(jobService, times(1)).deleteJobPost(jobPostId, TEST_USERNAME);
+    }
+
+    @Test
+    @WithMockUser(username = TEST_USERNAME)
+    public void testGetHrJobPosts() throws Exception {
+        // Given
+        PageImpl<JobPostSummaryResponse> page = new PageImpl<>(summaryResponses);
+        when(jobService.getHrJobPosts(eq(TEST_USERNAME), any(JobFilter.class), any(Pageable.class))).thenReturn(page);
+
+        // When & Then
+        mockMvc.perform(get("/api/v1/jobs"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.content", hasSize(summaryResponses.size())));
+    }
+
+    @Test
+    @WithMockUser(username = TEST_USERNAME)
+    public void testToggleJobPostStatus() throws Exception {
+        // Given
+        UUID jobPostId = UUID.randomUUID();
+        when(jobService.toggleJobPostActiveStatus(jobPostId, TEST_USERNAME)).thenReturn(jobPostResponse);
+
+        // When & Then
+        mockMvc.perform(patch("/api/v1/jobs/" + jobPostId + "/toggle-status"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").exists());
+    }
+    
+    @Test
+    @WithMockUser(username = TEST_USERNAME)
+    public void testExtendJobPostVisibility() throws Exception {
+        // Given
+        UUID jobPostId = UUID.randomUUID();
+        int days = 30;
+        when(jobService.extendJobPostVisibility(jobPostId, TEST_USERNAME, days)).thenReturn(jobPostResponse);
+
+        // When & Then
+        mockMvc.perform(patch("/api/v1/jobs/" + jobPostId + "/extend-visibility")
+                .param("days", String.valueOf(days)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").exists());
+    }
+    
+    @Test
+    @WithMockUser(username = TEST_USERNAME)
+    public void testGetJobPostStats() throws Exception {
+        // Given
+        UUID jobPostId = UUID.randomUUID();
+        JobPostStatsResponse statsResponse = JobPostStatsResponse.builder()
+                .jobPostId(jobPostId)
+                .jobTitle("Software Engineer")
+                .totalApplications(10L)
+                .applicationsByStatus(Map.of(ApplicationStatus.PENDING, 5L, ApplicationStatus.REVIEWING, 5L))
+                .build();
+        
+        when(jobService.getJobPostStats(jobPostId, TEST_USERNAME)).thenReturn(statsResponse);
+
+        // When & Then
+        mockMvc.perform(get("/api/v1/jobs/" + jobPostId + "/stats"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.jobPostId").value(jobPostId.toString()))
+                .andExpect(jsonPath("$.totalApplications").value(10));
+    }
+    
+    @Test
+    @WithMockUser(username = TEST_USERNAME)
+    public void testGetJobPostsExpiringSoon() throws Exception {
+        // Given
+        when(jobService.getJobPostsExpiringSoon(eq(TEST_USERNAME), anyInt())).thenReturn(summaryResponses);
+
+        // When & Then
+        mockMvc.perform(get("/api/v1/jobs/expiring-soon"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(summaryResponses.size())));
     }
 
     @Test
@@ -213,37 +364,26 @@ public class JobPostControllerTest {
     public void testGetJobApplications() throws Exception {
         // Given
         UUID jobPostId = UUID.randomUUID();
-        
-        // Create a filter object to pass to the service method
-        ApplicationFilter filter = new ApplicationFilter();
-        
-        // Mock application service
-        Page<ApplicationSummaryResponse> applicationPage = new PageImpl<>(Arrays.asList(
+        List<ApplicationSummaryResponse> applications = List.of(
             ApplicationSummaryResponse.builder()
                 .id(UUID.randomUUID())
-                .applicantName("John Applicant")
-                .applicantEmail("john@example.com")
-                .status(ApplicationStatus.SUBMITTED)
-                .createdAt(LocalDateTime.now())
-                .build(),
-            ApplicationSummaryResponse.builder()
-                .id(UUID.randomUUID())
-                .applicantName("Jane Applicant")
-                .applicantEmail("jane@example.com")
-                .status(ApplicationStatus.UNDER_REVIEW)
-                .createdAt(LocalDateTime.now())
+                .jobPostId(jobPostId)
+                .candidateName("Jane Doe")
+                .status(ApplicationStatus.PENDING)
+                .appliedAt(LocalDateTime.now())
                 .build()
-        ));
+        );
         
-        when(applicationService.getApplicationsByJobPostId(eq(jobPostId), any(ApplicationFilter.class), any(Pageable.class), eq(TEST_USERNAME)))
-            .thenReturn(applicationPage);
+        Page<ApplicationSummaryResponse> applicationsPage = new PageImpl<>(applications);
+        
+        when(applicationService.getApplicationsByJobPostId(
+                eq(jobPostId), any(ApplicationFilter.class), any(Pageable.class), eq(TEST_USERNAME)))
+                .thenReturn(applicationsPage);
 
         // When & Then
-        mockMvc.perform(get("/api/v1/job-posts/" + jobPostId + "/applications")
-                .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/api/v1/jobs/" + jobPostId + "/applications"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.content", hasSize(2)))
-                .andExpect(jsonPath("$.content[0].applicantName").value("John Applicant"))
-                .andExpect(jsonPath("$.content[1].applicantName").value("Jane Applicant"));
+                .andExpect(jsonPath("$.content", hasSize(1)))
+                .andExpect(jsonPath("$.content[0].status").value("PENDING"));
     }
 } 
